...
          headerLargeTitle: false,
        }}
      />
      {showMore || showShare || showPost || uploadStarted ? (
        <Stack.Toolbar placement="right">
          <Stack.Toolbar.Menu
            accessibilityLabel="More"
            icon="ellipsis.circle"
            hidden={!showMore}
          >
            <Stack.Toolbar.MenuAction
              icon="pencil"
              hidden={!showDelete}
              onPress={handleEdit}
            >
              Edit
            </Stack.Toolbar.MenuAction>
            <Stack.Toolbar.MenuAction
              icon="trash"
              destructive
              hidden={!showDelete}
              disabled={deleteMutation.isPending}
...
